--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,15 +2,21 @@ body{display: flex; min-height: 100vh; flex-direction: column;}
 main{flex: 1 0 auto;}
 hr{margin: 30px 0; border: 0; border-top: 1px solid #eee;}
 
+/* Classes */
+
+
+/* ID's */
+#auth-form{margin-top: 50px;}
+
 /* Materialize */
-.tabs .tab a, label.active, .dropdown-content li > span, .datepicker-table td.is-today, .confirmation-btns button{color: #1E88E5 !important;}
-.tabs .tab a.active, .tabs .tab a:hover{color: #1e6abc;}
-.tabs .tab a:focus.active{background-color: #d9edf7;}
-.tabs .indicator{background-color: #1e6abc;}
-.datepicker-date-display, .datepicker-table td.is-selected, .timepicker-digital-display{background-color: #1E88E5;}
+.tabs .tab a, label.active, .dropdown-content li > span, .datepicker-table td.is-today, .confirmation-btns button{color: #1cce9c !important;}
+.tabs .tab a.active, .tabs .tab a:hover{color: #1DE9B6;}
+.tabs .tab a:focus.active{background-color: #1DE9B6;}
+.tabs .indicator{background-color: #1DE9B6;}
+.datepicker-date-display, .datepicker-table td.is-selected, .timepicker-digital-display{background-color: #1DE9B6;}
 .datepicker-table td.is-today.is-selected{color: white !important;}
-input:focus{border-color: #1E88E5 !important;}
-[type="checkbox"]:checked + span:not(.lever)::before{border-right: solid 2px #1E88E5; border-bottom: solid 2px #1E88E5;}
+input:focus{border-color: #1DE9B6 !important;}
+[type="checkbox"]:checked + span:not(.lever)::before{border-right: solid 2px #1DE9B6; border-bottom: solid 2px #1DE9B6;}
 .timepicker-tick:hover{background-color: rgba(38,125,255,0.25)}
-.dropdown-content li a{color: #1E88E5;}
+.dropdown-content li a{color: #1DE9B6;}
 .dropdown-content{top: 64px !important;}
