--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+/* Elements */
 body{display: flex; min-height: 100vh; flex-direction: column;}
 main{flex: 1 0 auto;}
 hr{margin: 30px 0; border: 0; border-top: 1px solid #eee;}
